@@ -8,11 +8,12 @@ package edu.ie3.datamodel.io.factory.result;
 import static tech.units.indriya.unit.Units.PERCENT;
 
 import edu.ie3.datamodel.exceptions.FactoryException;
-import edu.ie3.datamodel.io.factory.SimpleEntityData;
+import edu.ie3.datamodel.io.factory.EntityData;
+import edu.ie3.datamodel.models.Entity;
 import edu.ie3.datamodel.models.StandardUnits;
-import edu.ie3.datamodel.models.UniqueEntity;
 import edu.ie3.datamodel.models.result.system.*;
 import java.time.ZonedDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.*;
 import javax.measure.quantity.Dimensionless;
 import javax.measure.quantity.Power;
@@ -20,14 +21,14 @@ import tech.units.indriya.ComparableQuantity;
 
 /**
  * Factory class for creating {@link SystemParticipantResult} entities from provided {@link
- * SimpleEntityData} data objects.
+ * EntityData} data objects.
  */
 public class SystemParticipantResultFactory extends ResultEntityFactory<SystemParticipantResult> {
 
   private static final String POWER = "p";
   private static final String REACTIVE_POWER = "q";
   private static final String SOC = "soc";
-  private static final String Q_DOT = "qdot";
+  private static final String Q_DOT = "qDot";
 
   public SystemParticipantResultFactory() {
     super(
@@ -48,11 +49,11 @@ public class SystemParticipantResultFactory extends ResultEntityFactory<SystemPa
    * Create a new factory to build {@link SystemParticipantResult}s and utilize the given date time
    * formatter pattern to parse date time strings
    *
-   * @param dtfPattern Pattern to parse date time strings
+   * @param dateTimeFormatter to parse date time strings
    */
-  public SystemParticipantResultFactory(String dtfPattern) {
+  public SystemParticipantResultFactory(DateTimeFormatter dateTimeFormatter) {
     super(
-        dtfPattern,
+        dateTimeFormatter,
         LoadResult.class,
         FixedFeedInResult.class,
         BmResult.class,
@@ -67,92 +68,64 @@ public class SystemParticipantResultFactory extends ResultEntityFactory<SystemPa
   }
 
   @Override
-  protected List<Set<String>> getFields(SimpleEntityData data) {
+  protected List<Set<String>> getFields(Class<?> entityClass) {
     /// all result models have the same constructor except StorageResult
     Set<String> minConstructorParams = newSet(TIME, INPUT_MODEL, POWER, REACTIVE_POWER);
-    Set<String> optionalFields = expandSet(minConstructorParams, ENTITY_UUID);
 
-    if (data.getTargetClass().equals(StorageResult.class)
-        || data.getTargetClass().equals(EvResult.class)) {
+    if (entityClass.equals(StorageResult.class) || entityClass.equals(EvResult.class)) {
       minConstructorParams = newSet(TIME, INPUT_MODEL, POWER, REACTIVE_POWER, SOC);
-      optionalFields = expandSet(minConstructorParams, ENTITY_UUID);
     }
 
-    if (SystemParticipantWithHeatResult.class.isAssignableFrom(data.getTargetClass())) {
+    if (SystemParticipantWithHeatResult.class.isAssignableFrom(entityClass)) {
       minConstructorParams = expandSet(minConstructorParams, Q_DOT);
-      optionalFields = expandSet(minConstructorParams, ENTITY_UUID);
     }
 
-    return Arrays.asList(minConstructorParams, optionalFields);
+    return List.of(minConstructorParams);
   }
 
   @Override
-  protected SystemParticipantResult buildModel(SimpleEntityData data) {
-    Class<? extends UniqueEntity> entityClass = data.getTargetClass();
+  protected SystemParticipantResult buildModel(EntityData data) {
+    Class<? extends Entity> entityClass = data.getTargetClass();
 
     ZonedDateTime zdtTime = timeUtil.toZonedDateTime(data.getField(TIME));
     UUID inputModelUuid = data.getUUID(INPUT_MODEL);
     ComparableQuantity<Power> p = data.getQuantity(POWER, StandardUnits.ACTIVE_POWER_RESULT);
     ComparableQuantity<Power> q =
         data.getQuantity(REACTIVE_POWER, StandardUnits.REACTIVE_POWER_RESULT);
-    Optional<UUID> uuidOpt =
-        data.containsKey(ENTITY_UUID) ? Optional.of(data.getUUID(ENTITY_UUID)) : Optional.empty();
 
     if (entityClass.equals(LoadResult.class)) {
-      return uuidOpt
-          .map(uuid -> new LoadResult(uuid, zdtTime, inputModelUuid, p, q))
-          .orElseGet(() -> new LoadResult(zdtTime, inputModelUuid, p, q));
+      return new LoadResult(zdtTime, inputModelUuid, p, q);
     } else if (entityClass.equals(FixedFeedInResult.class)) {
-      return uuidOpt
-          .map(uuid -> new FixedFeedInResult(uuid, zdtTime, inputModelUuid, p, q))
-          .orElseGet(() -> new FixedFeedInResult(zdtTime, inputModelUuid, p, q));
+      return new FixedFeedInResult(zdtTime, inputModelUuid, p, q);
     } else if (entityClass.equals(BmResult.class)) {
-      return uuidOpt
-          .map(uuid -> new BmResult(uuid, zdtTime, inputModelUuid, p, q))
-          .orElseGet(() -> new BmResult(zdtTime, inputModelUuid, p, q));
+      return new BmResult(zdtTime, inputModelUuid, p, q);
     } else if (entityClass.equals(PvResult.class)) {
-      return uuidOpt
-          .map(uuid -> new PvResult(uuid, zdtTime, inputModelUuid, p, q))
-          .orElseGet(() -> new PvResult(zdtTime, inputModelUuid, p, q));
+      return new PvResult(zdtTime, inputModelUuid, p, q);
     } else if (entityClass.equals(EvcsResult.class)) {
-      return uuidOpt
-          .map(uuid -> new EvcsResult(uuid, zdtTime, inputModelUuid, p, q))
-          .orElseGet(() -> new EvcsResult(zdtTime, inputModelUuid, p, q));
+      return new EvcsResult(zdtTime, inputModelUuid, p, q);
     } else if (entityClass.equals(EmResult.class)) {
-      return uuidOpt
-          .map(uuid -> new EmResult(uuid, zdtTime, inputModelUuid, p, q))
-          .orElseGet(() -> new EmResult(zdtTime, inputModelUuid, p, q));
+      return new EmResult(zdtTime, inputModelUuid, p, q);
     } else if (SystemParticipantWithHeatResult.class.isAssignableFrom(entityClass)) {
       /* The following classes all have a heat component as well */
       ComparableQuantity<Power> qDot = data.getQuantity(Q_DOT, StandardUnits.Q_DOT_RESULT);
 
       if (entityClass.equals(ChpResult.class)) {
-        return uuidOpt
-            .map(uuid -> new ChpResult(uuid, zdtTime, inputModelUuid, p, q, qDot))
-            .orElseGet(() -> new ChpResult(zdtTime, inputModelUuid, p, q, qDot));
+        return new ChpResult(zdtTime, inputModelUuid, p, q, qDot);
       } else if (entityClass.equals(HpResult.class)) {
-        return uuidOpt
-            .map(uuid -> new HpResult(uuid, zdtTime, inputModelUuid, p, q, qDot))
-            .orElseGet(() -> new HpResult(zdtTime, inputModelUuid, p, q, qDot));
+        return new HpResult(zdtTime, inputModelUuid, p, q, qDot);
       } else {
         throw new FactoryException("Cannot process " + entityClass.getSimpleName() + ".class.");
       }
     } else if (entityClass.equals(WecResult.class)) {
-      return uuidOpt
-          .map(uuid -> new WecResult(uuid, zdtTime, inputModelUuid, p, q))
-          .orElseGet(() -> new WecResult(zdtTime, inputModelUuid, p, q));
+      return new WecResult(zdtTime, inputModelUuid, p, q);
     } else if (entityClass.equals(EvResult.class)) {
       ComparableQuantity<Dimensionless> socQuantity = data.getQuantity(SOC, PERCENT);
 
-      return uuidOpt
-          .map(uuid -> new EvResult(uuid, zdtTime, inputModelUuid, p, q, socQuantity))
-          .orElseGet(() -> new EvResult(zdtTime, inputModelUuid, p, q, socQuantity));
+      return new EvResult(zdtTime, inputModelUuid, p, q, socQuantity);
     } else if (entityClass.equals(StorageResult.class)) {
       ComparableQuantity<Dimensionless> socQuantity = data.getQuantity(SOC, PERCENT);
 
-      return uuidOpt
-          .map(uuid -> new StorageResult(uuid, zdtTime, inputModelUuid, p, q, socQuantity))
-          .orElseGet(() -> new StorageResult(zdtTime, inputModelUuid, p, q, socQuantity));
+      return new StorageResult(zdtTime, inputModelUuid, p, q, socQuantity);
     } else {
       throw new FactoryException("Cannot process " + entityClass.getSimpleName() + ".class.");
     }
